--- a/PrinterySystem/Views/Manager/PrintingInkStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PrintingInkStockManagement.cshtml
@@ -250,15 +250,16 @@
         function CreatePurchaseOrder() {
             debugger;
             var pname = document.getElementById('PInkName').value
-            var pcount=document.getElementById('PCcount').value
+            var pcount = document.getElementById('PCcount').value
+            var Createpersonid = document.getElementById('personid').innerText;
             var result = {
                 "PurchasingID":"",
                 "InkId": "",
                 "InkName": pname,
                 "Count": pcount,
                 "Price": 0,
-                "CreatePersonId": "123456",
-                "ProcessPersonId": "7654321",
+                "CreatePersonId": Createpersonid,
+                "ProcessPersonId": Createpersonid,
                 "Status": "待处理",
                 "CreateDate": "",
                 "ProcessDate":""
