--- a/PrinterySystem/Views/Manager/PurchasingManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PurchasingManagement.cshtml
@@ -105,7 +105,7 @@
 
                         if (paperList != null && paperList.Count > 0)
                         {
-                            @Html.Partial("Pager1")
+                            @Html.Partial("Pager")
 
                         }
                     }
