--- a/PrinterySystem/Views/Shared/Pager.cshtml
+++ b/PrinterySystem/Views/Shared/Pager.cshtml
@@ -10,7 +10,7 @@
     }
 }
 
-<nav aria-label="Page navigation example">
+<div>
     <ul class="pagination justify-content-center">
         @if (_pager.PageIndex == 0)
         {
@@ -55,4 +55,4 @@
             </li>
         }
     </ul>
-</nav>
+</div>
