--- a/PrinterySystem/Views/Manager/ProduceManagement.cshtml
+++ b/PrinterySystem/Views/Manager/ProduceManagement.cshtml
@@ -92,7 +92,7 @@
                                     </td>
                                     <td class="text-center">
                                         <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                                            <button type="button" class="btn btn-outline-secondary editbtn">处理</button>
+                                            <button type="button" class="btn btn-outline-secondary procebtn">处理</button>
                                             <button type="button" class="btn btn-outline-secondary delbtn">删除</button>
                                         </div>
                                     </td>
@@ -168,6 +168,25 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="ProcessViewModal" tabindex="-1" role="dialog" aria-labelledby="removeModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title">生产单号：</h5><h5 class="modal-title" id="procid">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    确定生产该产品吗？
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-outline-danger" onclick="Process()">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="~/Content/Dashboradasset/js/jquery-3.2.1.slim.min.js"></script>
     <script src="~/Content/Dashboradasset/js/popper.min.js"></script>
     <script src="~/Content/Dashboradasset/js/bootstrap.min.js"></script>
@@ -202,6 +221,43 @@
                 }
             })
         })
+        $('.procebtn').click(function () {
+            debugger;
+            var div = $(this).parent("div")
+            var id = div.parent("td");
+            var a = id.parent("tr");
+            var c = a.find(".guid")
+            var b = c.text();
+            $('#procid').text(b);
+            $('#ProcessViewModal').modal('show');
+        })
+        function Process() {
+            debugger;
+            var ProId = document.getElementById('procid').innerText;
+            var Processpersonid = document.getElementById('personid').innerText;
+            var re = {
+                PurchasingID: ProId,
+                Processpersonid: Processpersonid
+            }
+            $('#ProcessViewModal').modal('hide')
+            $(".modal-backdrop.fade").hide()
+            $.ajax({
+                type: "POST",
+                url: "../Manager/PushProcessIn",
+                contentType: "application/json;charset=UTF-8",
+                dataType: "json",
+                contentType: "application/json",
+                data: JSON.stringify(re),
+
+                success: function (e) {
+                    debugger;
+                    if (e != null)
+                        alert("已成功提交请稍后查看生产单状态！")
+                    location.reload()
+                }
+
+            })
+        }
     </script>
 </body>
 </html>
